# modconv

./: .clang-format  .gitignore  CMakeLists.txt  DMD.cpp  DMD.hpp  MOD.cpp  MOD.hpp  MODConv.sln  MODConv.vcxproj  MODConv.vcxproj.filters  README.md  cmds.cpp  cmds.hpp  commands.cpp  commands.hpp  commands.txt  common.hpp  linux_compile.sh  main.cpp  types.hpp
.github/workflows/: cmake-multi-platform.yml
common/: collision.cpp  collision.hpp  colour.cpp  colour.hpp  envelope.cpp  envelope.hpp  gxdefines.hpp  joint.cpp  joint.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  nbt.cpp  nbt.hpp  plane.cpp  plane.hpp  texture.cpp  texture.hpp  vector2.cpp  vector2.hpp  vector3.cpp  vector3.hpp  vtxmatrix.cpp  vtxmatrix.hpp
src/: MOD.cpp  MOD.hpp  commands.cpp  commands.hpp  common.hpp  main.cpp  types.hpp  unit_tests.hpp
src/common/: collision.cpp  collision.hpp  collision_serializer.hpp  colour.cpp  colour.hpp  dlist_reader.cpp  dlist_reader.hpp  envelope.cpp  envelope.hpp  gxdefines.hpp  joint.cpp  joint.hpp  material.cpp  material.hpp  material_io.hpp  material_serializer.hpp  mesh.cpp  mesh.hpp  nbt.cpp  nbt.hpp  plane.cpp  plane.hpp  texture.cpp  texture.hpp  vector2.cpp  vector2.hpp  vector3.cpp  vector3.hpp  vtxmatrix.cpp  vtxmatrix.hpp
src/util/: fstream_reader.hpp  fstream_writer.cpp  fstream_writer.hpp  misc.hpp  serialization_base.hpp  serialization_utils.hpp  text_serializer.hpp  tokeniser.hpp  vector_reader.cpp  (+1 more)
util/: fstream_reader.cpp  fstream_reader.hpp  fstream_writer.cpp  fstream_writer.hpp  misc.hpp  tokeniser.hpp  vector_reader.hpp
